Finish products endpoints
