# src/routes/products.routes.js
@@ -4,6 +4,7 @@ import * as productController from '../controllers/product.controller'
 /* Middlewares */
 import validateProduct from '../middlewares/validation/validateProduct'
 import isAdmin from '../middlewares/auth/isAdmin'
+import validateImage from '../middlewares/validation/validateImage'
 
 /* Routes config */
 const router = Router()
@@ -22,6 +23,11 @@ router.get(
 router.get(
   '/getById/:productId',
   productController.getProductById
+)
+
+router.get(
+  '/getByCategoryId/:categoryId',
+  productController.getProductsByCategoryId
 )
 
 router.get(
@@ -46,8 +52,21 @@ router.delete(
   productController.deleteProductById
 )
 
+router.put(
+  '/uploadPhoto/:productId',
+  [ isAdmin , validateImage ],
+  productController.uploadPhotoById
+)
+
+router.put(
+  '/uploadSlides/:productId',
+  [ isAdmin , validateImage ],
+  productController.uploadSlidesById
+)
+
 /* Error routes */
 const error = new Error('No productId was received')
+const categoryIdError = new Error('No categoryId was received')
 
 const idError = {
   success: false,
@@ -56,7 +75,16 @@ const idError = {
 }
 
 router.get('/getById',(req,res) => res.status(400).json(idError))
+router.get('/getByCategoryId',(req,res) => {
+  return res.status(400).json({
+    success: false,
+    content: categoryIdError,
+    message: 'No se recibió el id de categoría'
+  })
+})
 router.put('/updateById',(req,res) => res.status(400).json(idError))
 router.delete('/deleteById',(req,res) => res.status(400).json(idError))
+router.put('/uploadPhoto',(req,res) => res.status(400).json(idError))
+router.put('/uploadSlides',(req,res) => res.status(400).json(idError))
 
 export default router
